--- a/Amazon_Paid_Reviews_Apparel.ipynb
+++ b/Amazon_Paid_Reviews_Apparel.ipynb
@@ -17,43 +17,43 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nGhm_3x51DzL",
-        "outputId": "1da0e91e-a2d6-4549-c186-ac9800cd051d"
+        "outputId": "11e4e5ac-dcb2-4748-f249-16f5b9679b19"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Get:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease [1,581 B]\n",
-            "Get:3 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "\r0% [Working]\r            \rGet:1 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease [1,581 B]\n",
+            "\r0% [Connecting to archive.ubuntu.com (185.125.190.39)] [Connecting to security.\r0% [Connecting to archive.ubuntu.com (185.125.190.39)] [Connecting to security.\r0% [1 InRelease gpgv 1,581 B] [Waiting for headers] [Waiting for headers] [Wait\r                                                                               \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "\r0% [1 InRelease gpgv 1,581 B] [Waiting for headers] [Waiting for headers] [2 In\r0% [1 InRelease gpgv 1,581 B] [Waiting for headers] [Waiting for headers] [Conn\r                                                                               \rGet:3 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
             "Hit:4 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
             "Ign:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Get:7 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Get:8 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
+            "Get:6 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
+            "Hit:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
             "Get:9 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages [806 kB]\n",
             "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
             "Get:11 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
             "Get:12 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease [15.9 kB]\n",
-            "Get:13 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2,830 kB]\n",
-            "Get:14 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
-            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [982 kB]\n",
+            "Get:13 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
+            "Get:15 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [1,992 kB]\n",
             "Get:16 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,515 kB]\n",
-            "Get:18 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [1,992 kB]\n",
-            "Get:19 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,289 kB]\n",
+            "Get:17 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1,015 kB]\n",
+            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [982 kB]\n",
+            "Get:19 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2,830 kB]\n",
             "Get:20 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [1,021 kB]\n",
-            "Get:21 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,262 kB]\n",
-            "Get:22 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1,015 kB]\n",
+            "Get:21 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,290 kB]\n",
+            "Get:22 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,262 kB]\n",
             "Get:23 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic/main amd64 Packages [45.3 kB]\n",
             "Get:24 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic/main amd64 Packages [47.7 kB]\n",
-            "Fetched 16.1 MB in 6s (2,600 kB/s)\n",
+            "Fetched 16.1 MB in 4s (4,192 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -94,15 +94,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BDH2bJmz1JaZ",
-        "outputId": "3fe43575-bd43-4c90-87f8-c1d87e54a30a"
+        "outputId": "710a6b5d-da76-487b-839b-4fc8eb0566f2"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-06-09 00:19:59--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
+            "--2022-06-09 02:24:12--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -111,7 +111,7 @@
             "\n",
             "postgresql-42.2.16. 100%[===================>] 979.38K  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2022-06-09 00:19:59 (6.52 MB/s) - ‘postgresql-42.2.16.jar’ saved [1002883/1002883]\n",
+            "2022-06-09 02:24:12 (6.46 MB/s) - ‘postgresql-42.2.16.jar’ saved [1002883/1002883]\n",
             "\n"
           ]
         }
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "GP-o77_91M-u"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -143,9 +143,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kEbHOE801Okk",
-        "outputId": "9c2792c9-bdd9-4cd1-e524-87b30770da03"
+        "outputId": "a9ca7efa-d29d-424a-cd50-fbc8f31ac3be"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,9 +193,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iE1y7iGL1YhD",
-        "outputId": "ca81f861-201c-4203-d285-dcb043d18bcf"
+        "outputId": "e300ccf6-dde1-464a-f117-d5bff103fc28"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,9 +234,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w8QkSGDS1aKH",
-        "outputId": "35c69e35-3753-4da3-acf9-aaa71453bd0e"
+        "outputId": "4858d6a0-62d2-4ba7-ae8b-395cdf7da800"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,16 +277,17 @@
       "source": [
         "# Futher filtering reviews where helpful votes are more than 50% of total\n",
         "helpful_df = total_over_20_df.filter(col(\"helpful_votes\")/col(\"total_votes\")>=.5)\n",
-        "helpful_df.show()"
+        "helpful_df.show()\n",
+        "helpful_count = helpful_df.count()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GhGakahX1cRB",
-        "outputId": "ab3725ab-4b19-4c68-9951-dc008f4e1c1f"
+        "outputId": "ebc0682b-ebfd-4f37-b200-e2048398b565"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,16 +328,17 @@
       "source": [
         "# Further filtering only \"Vine\" reviews\n",
         "filtered_vine_df = helpful_df.filter(col(\"vine\")==\"Y\")\n",
-        "filtered_vine_df.show()"
+        "filtered_vine_df.show()\n",
+        "vine_count = filtered_vine_df.count()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BFZYYqOv1eZG",
-        "outputId": "87742cd0-aa9d-44f4-c36f-03935ca2fc43"
+        "outputId": "34092fbd-dc56-4f59-cc09-8bae2cf41a5f"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,18 +377,71 @@
     {
       "cell_type": "code",
       "source": [
+        "non_vine_count / helpful_count"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J0S-_EQ3Sw21",
+        "outputId": "3f7ee51f-1570-4505-d829-9774de2a0f47"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9992734638162964"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vine_count / helpful_count"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L8wuqZlbTA4p",
+        "outputId": "4d5f128a-3c69-4b1d-ad70-6024fc8da97a"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0007265361837035733"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Further filtering only \"Non-Vine\" reviews\n",
         "non_vine_df = helpful_df.filter(col(\"vine\")==\"N\")\n",
-        "non_vine_df.show()"
+        "non_vine_df.show()\n",
+        "non_vine_count = non_vine_df.count()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "M1dCVfZn1fD9",
-        "outputId": "d8cd8365-123c-4c17-f9a3-a12f5ced8116"
+        "outputId": "199ff630-6236-406e-87a8-e7327f7f824e"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +491,7 @@
         "id": "iHpEld1G1grH",
         "outputId": "ceca63cf-67ef-41e7-c0d1-a3179b841057"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +520,7 @@
         "id": "oP4tD7wh1i3l",
         "outputId": "a7b40a38-adc3-49e4-8ad7-701d35d98490"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +549,7 @@
         "id": "bxyswoCz1kLn",
         "outputId": "0dfb705e-0ec0-4927-8e60-97449f4d8977"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
